prevent embedded image overflow in event page

--- a/packages/bs-templates/templates/event/_style.scss
+++ b/packages/bs-templates/templates/event/_style.scss
@@ -69,8 +69,10 @@
     .description {
 
       h1 {
+
         font-size: 30px;
         padding: 20px 0;
+
       }
 
       h2 {
@@ -86,6 +88,8 @@
       }
 
       strong { font-weight: bold; }
+
+      img { max-width: 100%; }
 
     }
 
